--- a/index.html
+++ b/index.html
@@ -124,6 +124,25 @@
             width: 100%;
         }
 
+        .resume-btn {
+            background: linear-gradient(135deg, var(--accent-cyan), var(--accent-purple));
+            padding: 0.6rem 1.5rem;
+            border-radius: 25px;
+            color: var(--text-white) !important;
+            font-weight: 600;
+            box-shadow: 0 4px 15px rgba(0, 212, 255, 0.3);
+            transition: all 0.3s ease;
+        }
+
+        .resume-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(0, 212, 255, 0.5);
+        }
+
+        .resume-btn::after {
+            display: none;
+        }
+
         /* Hero Section */
         .hero {
             min-height: 100vh;
@@ -705,6 +724,7 @@
             <li><a href="#experience">Work</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="Egshiglen_Batjargal_Resume.pdf" class="resume-btn" download>Resume</a></li>
         </ul>
     </nav>
 
