--- a/index.html
+++ b/index.html
@@ -736,8 +736,6 @@
             </h1>
             <p class="hero-subtitle">Let's connect!</p>
             <p style="color: var(--text-gray); font-size: 1.2rem; max-width: 700px; line-height: 1.8;">
-                Data analyst and policy researcher transforming complex data into actionable insights 
-                for meaningful social impact.
             </p>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">View My Work</a>
@@ -765,7 +763,7 @@
                         <polygon points="50,25 75,37.5 75,62.5 50,75 25,62.5 25,37.5" fill="currentColor" opacity="0.3"/>
                     </svg>
                 </div>
-                <h3 class="role-title">Data Analyst Intern</h3>
+                <h3 class="role-title">Data Analyst</h3>
             </div>
 
             <div class="role-card">
@@ -776,7 +774,7 @@
                         <circle cx="50" cy="50" r="10" fill="currentColor"/>
                     </svg>
                 </div>
-                <h3 class="role-title">Policy Researcher</h3>
+                <h3 class="role-title">Data Storyteller</h3>
             </div>
 
             <div class="role-card">
@@ -786,7 +784,7 @@
                         <rect x="30" y="30" width="40" height="40" fill="currentColor" opacity="0.3" transform="rotate(45 50 50)"/>
                     </svg>
                 </div>
-                <h3 class="role-title">VP of Governance</h3>
+                <h3 class="role-title">Collaborative Team Leader</h3>
             </div>
 
             <div class="role-card">
@@ -795,7 +793,7 @@
                         <path d="M 30 50 Q 50 20, 70 50 Q 50 80, 30 50" fill="currentColor" opacity="0.3" stroke="currentColor" stroke-width="2"/>
                     </svg>
                 </div>
-                <h3 class="role-title">Machine Learning Enthusiast</h3>
+                <h3 class="role-title">Data Modeling Specialist</h3>
             </div>
         </div>
         
@@ -811,19 +809,22 @@
 
             <div class="about-content">
                 <p>
-                    I'm a data analyst and policy researcher passionate about leveraging data-driven insights 
-                    to create meaningful social impact. My work combines technical expertise in machine learning 
-                    and statistical analysis with a deep understanding of public policy challenges.
+                    I'm a data analyst and BI solutions developer passionate about transforming complex data 
+                    into actionable business insights through compelling visualizations and storytelling. 
+                    My work combines technical expertise in machine learning, statistical analysis, and 
+                    dashboard development with strong stakeholder collaboration skills.
                 </p>
                 <p>
                     At Carnegie Mellon University's Heinz College, I'm developing advanced skills in AI, 
-                    optimization, and database management while applying these tools to real-world sustainability 
-                    and social service challenges.
+                    data pipeline architecture, and database management—building solutions with tools like 
+                    Python, R, SQL, Tableau, and PowerBI. I excel at translating business requirements into 
+                    data-driven solutions that optimize decision-making.
                 </p>
                 <p>
-                    Originally from Ulaanbaatar, Mongolia, I bring an international perspective to my work, 
-                    from analyzing transportation systems in Mongolia to engineering predictive frameworks for 
-                    Allegheny County.
+                    Originally from Ulaanbaatar, Mongolia, I bring an international perspective and proven 
+                    ability to deliver results: from redesigning sustainability dashboards and conducting 
+                    57 stakeholder interviews, to analyzing transportation data and engineering predictive 
+                    frameworks—always with attention to detail and a collaborative, self-motivated approach.
                 </p>
             </div>
         </div>
@@ -867,7 +868,7 @@
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
                     <div class="timeline-date">Sep 2025 - Present</div>
-                    <h3 class="timeline-title">VP of Governance</h3>
+                    <h3 class="timeline-title">VP of Governance and Board Operations</h3>
                     <p class="timeline-company">Heinz AI Club, Carnegie Mellon University</p>
                     <ul class="timeline-desc">
                         <li>Directed operations for 100+ graduate members</li>
@@ -924,6 +925,29 @@
         </div>
     </section>
 
+    <div class="projects-grid">
+            <div class="project-card">
+                <div class="project-header">
+                    <h3 class="project-title">Google Playstore Market Analysis</h3>
+                    <p class="project-date">Sep - Nov 2025</p>
+                </div>
+                <div class="project-body">
+                    <p class="project-desc">
+                        Analyzed large-scale technology marketplace data using Python 
+                        to identify emerging patterns over 7-year period
+                        Synthesized complex analytical findings into clear, organized reports 
+                        on marketplace dynamics, technology risks, and governance implications for digital platforms
+                    </p>
+                    <div class="project-tags">
+                        <span class="tag">Python</span>
+                        <span class="tag">R</span>
+                        <span class="tag">Machine Learning</span>
+                        <span class="tag">Scikit-learn</span>
+                    </div>
+                </div>
+            </div>
+
+
     <!-- Skills -->
     <section id="skills">
         <h2 class="section-title">Skills</h2>
@@ -968,9 +992,8 @@
             <h2 class="section-title">Let's Connect</h2>
             <p class="section-subtitle">Get in touch for opportunities and collaborations</p>
             <div class="contact-links">
-                <a href="/cdn-cgi/l/email-protection#15707774617f74677255747b716770623b7678603b707160" class="contact-link">Email</a>
+                <a href="ebatjarg@andrew.cmu.edu" class="contact-link">Email</a>
                 <a href="https://linkedin.com/in/egshiglen/" target="_blank" class="contact-link">LinkedIn</a>
-                <a href="tel:202-855-2435" class="contact-link">Phone</a>
             </div>
         </div>
     </section>
