Update profile photo and remove project details
Removed project details from the projects section and updated profile photo.

--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
             <div class="about-photo">
                 <div class="photo-container">
                     <div class="photo-inner">
-                        <img src="profile-photo.jpg" alt="Egshiglen Batjargal">
+                        <img src="IMG_4523.jpg" alt="Egshiglen Batjargal">
                     </div>
                 </div>
                 <div class="photo-glow"></div>
@@ -924,29 +924,7 @@
             </div>
         </div>
     </section>
-
-    <div class="projects-grid">
-            <div class="project-card">
-                <div class="project-header">
-                    <h3 class="project-title">Google Playstore Market Analysis</h3>
-                    <p class="project-date">Sep - Nov 2025</p>
-                </div>
-                <div class="project-body">
-                    <p class="project-desc">
-                        Analyzed large-scale technology marketplace data using Python 
-                        to identify emerging patterns over 7-year period
-                        Synthesized complex analytical findings into clear, organized reports 
-                        on marketplace dynamics, technology risks, and governance implications for digital platforms
-                    </p>
-                    <div class="project-tags">
-                        <span class="tag">Python</span>
-                        <span class="tag">R</span>
-                        <span class="tag">Machine Learning</span>
-                        <span class="tag">Scikit-learn</span>
-                    </div>
-                </div>
-            </div>
-
+    
 
     <!-- Skills -->
     <section id="skills">
@@ -992,7 +970,6 @@
             <h2 class="section-title">Let's Connect</h2>
             <p class="section-subtitle">Get in touch for opportunities and collaborations</p>
             <div class="contact-links">
-                <a href="ebatjarg@andrew.cmu.edu" class="contact-link">Email</a>
                 <a href="https://linkedin.com/in/egshiglen/" target="_blank" class="contact-link">LinkedIn</a>
             </div>
         </div>
